Change buttons to images Add fonts, change colors

--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
     <script src="javascript.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&family=Marck+Script&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Let's Play Rock, Paper, Scissors!</h1>
+    <h2>Rock, paper, scissors, shoot:</h2>
     <div class="buttons">
-        <button id="rock">Rock</button>
+        <!--<button id="rock">Rock</button>
         <button id="paper">Paper</button>
-        <button id="scissors">Scissors</button>
+        <button id="scissors">Scissors</button>-->
+
+        <input type="image" class="button" id="rock" src="./images/rock.png" alt="Rock">
+        <input type="image" class="button" id="paper" src="./images/paper.png" alt="Paper">
+        <input type="image" class="button" id="scissors" src="./images/scissors.png" alt="Scissors">
     </div>
+
+    
 
     <div class="selections">
         <div id="comp-selection"></div>
